# NeighborDiscoveryService

./: CMakeLists.txt  README.md  event_poll.cpp  event_poll.h  interface.h  interface_manager.cpp  interface_manager.h  main.cpp  neighbor_manager.cpp  neighbor_manager.h
apps/: neighbor_cli.cpp  neighbor_service.cpp
include/neighbor_discovery/: client_manager.h  event_poll.h  interface.h  interface_manager.h  neighbor_manager.h
src/: client_manager.cpp  event_poll.cpp  interface_manager.cpp  neighbor_manager.cpp
